Fix for long player names overflowing BM label
Or UUIDs. Those are long, too.

--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -32,6 +32,7 @@
 
 .bmopm-offline-player > .bm-marker-poi-label {
 	white-space: nowrap;
+	max-width: unset !important;
 }
 
 .bmopm-offline-player > .bm-marker-poi-label > bmopm-datetime {
